--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "mongoose": "^8.4.0",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.3"
   }
 }
